src/scss/style.scss
@import 'variables';
@import 'reset';
// @import 'flexboxgrid';

@import 'header';
@import 'content-image';
@import 'content-body';

html, body {
  height: 100%;
}

body {
  color: #FFF;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.42857143;

  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('http://i.imgur.com/qAlNWZH.jpg') no-repeat center center fixed;
  background-size: cover;
}

.container {
  height: 100%;
  display: flex;
  flex-direction: column;
  // align-items: center;
  // justify-content: center;
}

.content-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-grow: 1;
  justify-content: center;
}

.content-box {
  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
  margin: 0 5px;
  border: 4px solid $loud-color;
  padding-top: 30px;
}

@media (min-width:320px) {
  /* smartphones, iPhone, portrait 480x320 phones */
}

@media (min-width:481px) {
  /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */

  .content-box {
    margin: 0 20px;
  }
}

@media (min-width:641px) {
  /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */

  .content-box {
    margin: 0 5px;
    padding: 30px;
    display: flex;
    flex-direction: row;
    align-items: center;
  }
}

@media (min-width:961px) {
  /* tablet, landscape iPad, lo-res laptops ands desktops */

  .content-box {
    margin: 0 20px;
  }
}

@media (min-width:1025px) {
  /* big landscape tablets, laptops, and desktops */
}

@media (min-width:1281px) {
  /* hi-res laptops and desktops */
}

